src/pages/options.css
/* ... */
body[data-locale|="es"] #sync-clippings-dlg #sync-helper-app-update-check + label {
    letter-spacing: -0.56px;
}

body[data-locale|="pt"] #sync-clippings-dlg #sync-helper-app-update-check + label {
    letter-spacing: -0.56px;
}

body[data-locale="nl"] #sync-clippings-dlg #sync-helper-app-update-check + label,
body[data-locale="uk"] #sync-clippings-dlg #sync-helper-app-update-check + label {
    letter-spacing: -0.65px;
    margin-right: 0;
}

#turn-off-sync-clippings-dlg {
    top: 160px;
    --width: 510px;
    --height: 150px;
}

#turn-off-sync-clippings-dlg .msgbox-icon {
    float: left;
    width: 48px;
    height: 48px;
    margin-top: 8px;
    margin-right: 12px;
    background-image: url("../img/question-64.png");
    background-size: contain;
}

body[data-os="mac"] #turn-off-sync-clippings-dlg .msgbox-icon {
    background-image: url("../img/question-64-mac.png");
}

#turn-off-sync-clippings-ack-dlg {
    top: 160px;
    --width: 606px;
    --height: 176px;
}

#turn-off-sync-clippings-ack-dlg .info-icon {
    float: left;
    width: 40px;
    height: 40px;
    margin-top: 8px;
    margin-right: 12px;
    margin-bottom: 32px;
    background-image: url("../img/info.svg");
    background-size: contain;
}

#turn-off-sync-clippings-ack-dlg #delete-sync-fldr {
    margin-left: -20px;
}

#turn-off-sync-clippings-ack-dlg #delete-sync-fldr-opt {
    margin-left: 74px;
}

#sync-clippings-dlg input[type="checkbox"] + label,
#turn-off-sync-clippings-ack-dlg #delete-sync-fldr-opt > #delete-sync-fldr + label {
    font-size: 13px;
}

#sync-clippings-help-dlg {
    --width: 600px;
    --height: 424px;
}

#sync-clippings-help-dlg .dlg-content {
    max-height: 406px;
    overflow-y: auto;
}

#about-dlg {
    top: 72px;
    --width: 410px;
    --height: 320px;
}

body[data-os="mac"] #about-dlg {
    --width: 414px;
}

body[data-locale="de"] #about-dlg {
    height: 326px;
}

#about-dlg #ext-icon {
    float: left;
    width: 48px;
    height: 48px;
    margin-top: 8px;
    margin-right: 12px;
    background-image: url("../img/icon.svg");
    background-size: contain;
}

#about-dlg > .dlg-content {
    font-size: 12px;
}

#about-dlg .about-content-row {
    display: block;
}

#about-dlg hr {
    margin-top: 10px;
    margin-bottom: 10px;
    border-top: 1px solid var(--color-fieldset-border);
    color: var(--color-fieldset-border);
}

#about-dlg #ext-info {
    padding-top: 12px;
}

#about-dlg #ext-name {
    font-size: 17px;
    font-weight: 600;
}

#about-dlg #ext-ver {
    font-size: 11px;
    line-height: 1.5;
}

#about-dlg #ext-desc {
    clear: left;
    margin-right: 0;
    padding-top: 12px;
    font-size: 13px;
}

body[data-locale="fr"] #about-dlg #ext-desc {
    letter-spacing: -0.28px;
}

body[data-locale|="pt"] #about-dlg #ext-desc {
    letter-spacing: -0.3px;
}

body[data-locale|="pt"][data-os="mac"] #about-dlg #ext-desc {
    letter-spacing: -0.55px;
}

#about-dlg #credits label {
    line-height: 18px;
}

#about-dlg #usr-contrib-cta {
    margin-top: 8px;
}

body[data-locale="de"] #about-dlg #usr-contrib-cta {
    letter-spacing: -0.2px;
}

body[data-locale|="pt"] #about-dlg #usr-contrib-cta {
    letter-spacing: -0.55px;
}

body[data-locale|="es"] #about-dlg #usr-contrib-cta {
    letter-spacing: -0.15px;
}

body[data-locale="uk"] #about-dlg #usr-contrib-cta {
    letter-spacing: -0.5px;
}

#about-dlg #usr-contrib-cta-hdg {
    font-weight: 600;
}

#about-dlg #diag-info {
    font-size: 11px;
}

#about-dlg #sync-diag-loading > img {
    width: 16px;
    height: 16px;
}

#about-dlg #diag-info label {
    line-height: 16px;
}

